--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@rails/webpacker": "5.2.1",
     "autoprefixer": "^10.2.1",
     "postcss": "^8.2.3",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^2.0.1-compat",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
