Fix typo with Jabba's Sail Barge

--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -68,7 +68,7 @@ jabba:
   species: Human
   gender: Female
   weapon: Blaster Pistol
-  vehicle: Jabba's Sale Barge
+  vehicle: Jabba's Sail Barge
   affiliations: hutt_clan
   locations: tatooine
 
