Fix spelling of TIE fighter

--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -8,7 +8,7 @@ vader:
   species: Human
   gender: Male
   weapon: Lightsaber
-  vehicle: Tiefighter
+  vehicle: TIE Fighter
   affiliations: sith
   locations: death_star, tatooine
 
